# CMakeList.txt: проект CMake для HanoiTower; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (HanoiTower "HanoiTower.cpp" "HanoiTower.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
