# CMakeList.txt: проект CMake для lab7.2; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (lab7.2 "lab7.2.cpp" "lab7.2.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
