# CMakeList.txt: проект CMake для lab9; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (lab9 "lab9.cpp" "lab9.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
