# CMakeList.txt: проект CMake для lab6; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (lab6 "lab6.cpp" "lab6.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
